fix: slider overflow

--- a/css/slider.css
+++ b/css/slider.css
@@ -85,7 +85,7 @@ body{
 }
 .case-study-wrapper {
 	position: absolute;
-	top: 50%;
+	top: 50.2%;
 	left: 20px;
 	z-index: 10;
 	width: auto;
